--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="nav-main">
-        <div class="btn-toggle-nav" onmouseover="toggleNav()"  onclick="toggleNav()"></div>
+        <div class="btn-toggle-nav" onmouseenter="showNav()" onmouseleave="closeNav()
     </nav>
     
     <aside class="nav-sidebar">
